--- a/classes/trac_AddNoteCtlrTest.cls
+++ b/classes/trac_AddNoteCtlrTest.cls
@@ -21,4 +21,23 @@ private class trac_AddNoteCtlrTest {
         System.assertEquals('Add Notes To Order', error.Service__c);
 
     }
+
+    @IsTest
+    static void testApplyReviewNotesHold() {
+        Test.setMock(HttpCalloutMock.class, new MockOrderResponses('/update'));
+        TLAuraResponse response  = trac_AddNoteCtlr.applyReviewNotesHold('SAKS','1234', 'test notes');
+        System.assertEquals(true, response.isSuccess);
+
+    }
+
+    @IsTest
+    static void testApplyReviewNotesHoldError() {
+        Test.setMock(HttpCalloutMock.class, new MockOrderResponsesError('/update'));
+        TLAuraResponse response  =  trac_AddNoteCtlr.applyReviewNotesHold('SAKS','1234', 'test notes');
+        System.assertEquals(false, response.isSuccess);
+
+        Integration_Error__c error = [SELECT Id,Service__c FROM Integration_Error__c LIMIT 1];
+        System.assertNotEquals(null, error);
+
+    }
 }
